pod-with-pv.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: time-check
spec:
  containers:
    - name: time-check
      image: busybox
      command: ["/bin/sh"]
      args: ["-c", "while true; do date; sleep $TIME_FREQ;done > /opt/time/time-check.log"]
      volumeMounts:
      - mountPath: "/opt/time"
        name: mypd
        
  volumes:
    - name: mypd
      hostPath:
        path: "/opt"
        type: Directory
