pod-with-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: time-check
spec:
  volumes:
      - name: time-check
        persistentVolumeClaim:
          claimName: local-pvc
  containers:
    - name: nginx
      image: nginx:alpine
      volumeMounts:
      - mountPath: "/var/www/html"
        name: mypd
