netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            run: payroll
      ports:
        - port: 8080
          protocol: TCP
    - to:
      - podSelector:
          matchLabels:
            run: mysql
      ports:
        - port: 3306
          protocol: TCP
